# AirType

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1  entry.py  package-lock.json  pyproject.toml
airtype/: __init__.py  __main__.py  asr_engine.py  audio_capture.py  config.py  floating_capsule.py  llm_refiner.py  main.py  settings_dialog.py  text_injector.py  tray_icon.py  watchdog.py
docs/superpowers/plans/: 2026-05-18-startup-toast.md
docs/superpowers/specs/: 2026-05-18-startup-toast-design.md
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asr.rs  audio.rs  commands.rs  config.rs  hotkey.rs  inject.rs  lib.rs  llm.rs  log.rs  main.rs  state.rs  toast.rs  tray.rs  util.rs
src-tauri/tests/: test_asr.rs  test_audio.rs  test_config.rs  test_e2e.rs  test_inject.rs  test_llm.rs  test_llm_integration.rs  test_pipeline.rs  test_tray_settings.rs
ui/: blank.html  capsule.html  settings.html  toast.html
