[project]
name = "airtype"
version = "0.1.0"
description = "Windows system-tray voice input app with Qwen3-ASR"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "transformers>=4.40",
    "accelerate>=0.27",
    "keyboard>=0.13.5",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "pyautogui>=0.9.54",
    "openai>=1.0",
    "win32mica>=1.7; sys_platform == 'win32'",
    "qwen-asr",
    "soundfile",
]

[tool.uv]
# torch + torchaudio are installed separately via --index-url for CUDA
# Do NOT add them here or uv will resolve the CPU-only wheel.
extra-index-url = [
    "https://download.pytorch.org/whl/cu126",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
